[package]
name = "bluestation-bs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bluestation-bs"
path = "src/main.rs"

[features]
# Compile the Asterisk SIP/RTP bridge (and link the native TETRA codec) into the
# device binary. Off by default so the standard build needs no codec.
default = []
asterisk = ["tetra-entities/asterisk"]

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true }
tetra-entities = { workspace = true }

clap = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
rustls = { version = "0.23", default-features = false }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[lints]
workspace = true
